pod-security/baseline/disallow-host-namespaces/e2e/01-policy.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- ../disallow-host-namespaces.yaml
assert:
- policy-assert.yaml
