pod-security/baseline/disallow-host-namespaces/e2e/enforce-policy-assert.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: disallow-host-namespaces
spec:
  validationActions: [Deny]
status:
  conditionStatus:
    ready: true
